--- a/templates/chat-room.html
+++ b/templates/chat-room.html
@@ -1,433 +1,28 @@
 <!DOCTYPE html>
 <html lang="zh">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="initial-scale=1, width=device-width" />
-
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/global.css') }}" />
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/chat-room.css') }}" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;700&display=swap"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap"/>
-  
-    <script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script>
-  </head>
-  <body>
-    <div class="chat-room">
-      <div class="wrapper4">
-        <a class="a6">聊天室</a>
-      </div>
-      <main class="chatroom-content">
-        <section class="chat">
-          <div class="chat-components">
-            <div class="profile1">
-              <div class="profile-components">
-                <div class="button">
-                  <h1 class="h12">情感分析區</h1>
-                </div>
-              </div>
-              <div class="profile-child"></div>
-              <div class="list-parent">
-                <div class="list">
-                  <div class="menu-item">
-                    <img
-                      class="search-icon"
-                      loading="lazy"
-                      alt=""
-                      src="{{url_for('static', filename='image/search.svg')}}"
-                    />
-
-                    <div class="div14">搜尋</div>
-                  </div>
-                  <div class="menu-item1">
-                    <img class="image-icon" alt="" src="{{url_for('static', filename='image/image.svg')}}" />
-
-                    <div class="div15">傳送圖片</div>
-                  </div>
-                  <div class="menu-item2">
-                    <img
-                      class="more-horizontal-icon"
-                      alt=""
-                      src="{{url_for('static', filename='image/morehorizontal.svg')}}"
-                    />
-
-                    <div class="div16">更多</div>
-                  </div>
-                </div>
-                <div class="person-wrapper">
-                  <div class="person">
-                    <div class="avatar-wrapper">
-                      <img
-                        class="avatar-icon"
-                        loading="lazy"
-                        alt=""
-                        src="{{url_for('static', filename='image/avatar@2x.png')}}"
-                      />
-                    </div>
-                    <div class="name-status">
-                      <div class="helena">Helena</div>
-                      <div class="div17">20分鐘前上線</div>
-                    </div>
-                  </div>
-                </div>
-              </div>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>聊天應用</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+</head>
+<body>
+    <div id="chat-container">
+        <div id="sidebar">
+            <!-- 在這裡添加側邊欄內容 -->
+            <div class="user-list">
+                <!-- 這裡可以動態添加用戶列表 -->
             </div>
-            <div class="list1">
-              <div class="chat-list-header">
-                <h1 class="h13">聊天列表</h1>
-              </div>
-              <div class="chat-list-search">
-                <div class="search-bar">
-                  <div class="search1">
-                    <img
-                      class="search-icon1"
-                      alt=""
-                      src="{{url_for('static', filename='image/search-1.svg')}}"
-                    />
-
-                    <input class="label" placeholder="搜尋" type="text" />
-                  </div>
-                </div>
-                <div class="chat-list">
-                  <div class="conversation">
-                    <img
-                      class="avatar-icon1"
-                      loading="lazy"
-                      alt=""
-                      src="{{url_for('static', filename='image/avatar-1@2x.png')}}"
-                    />
-
-                    <div class="conversation-preview">
-                      <div class="text">
-                        <div class="helena-hills">Helena Hills</div>
-                        <div class="will-head-to">
-                          Will head to the Help Center...
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="conversation1">
-                    <div class="avatar">
-                      <img
-                        class="avatar-child"
-                        loading="lazy"
-                        alt=""
-                        
-                        src="{{url_for('static', filename='image/rectangle-1@2x.png')}}"
-                      />
-                    </div>
-                    <div class="text-wrapper">
-                      <div class="text1">
-                        <div class="oscar-davis">Oscar Davis</div>
-                        <div class="trueeeeee">Trueeeeee</div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="conversation2">
-                    <img
-                      class="avatar-icon2"
-                      alt=""
-                      
-                      src="{{url_for('static', filename='image/avatar-2@2x.png')}}"
-                      />
-
-                    <div class="text-container">
-                      <div class="text2">
-                        <div class="daniel-jay-park">Daniel Jay Park</div>
-                        <div class="lol-yeah-are">
-                          lol yeah, are you coming to the lunch on the 13th?
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="conversation3">
-                    <img
-                      class="avatar-icon3"
-                      alt=""
-                      
-                      src="{{url_for('static', filename='image/avatar-3@2x.png')}}"
-                    />
-
-                    <div class="text-frame">
-                      <div class="text3">
-                        <div class="mark-rojas">Mark Rojas</div>
-                        <div class="great-catching-up">
-                          great catching up over dinner!!
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="conversation4">
-                    <img
-                      class="avatar-icon4"
-                      loading="lazy"
-                      alt=""
-                      src="{{url_for('static', filename='image/avatar-4@2x.png')}}"
-                    />
-
-                    <div class="text-wrapper1">
-                      <div class="text4">
-                        <div class="giannis-constantinou">
-                          Giannis Constantinou
-                        </div>
-                        <div class="yep">yep 🫡🫡</div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="conversation5">
-                    <img
-                      class="avatar-icon5"
-                      loading="lazy"
-                      alt=""
-                      src="{{url_for('static', filename='image/avatar-5@2x.png')}}"
-                    />
-
-                    <div class="text-wrapper2">
-                      <div class="text5">
-                        <div class="briana-lewis">Briana Lewis</div>
-                        <div class="when-are-you">
-                          When are you coming back to town? Would love to catch
-                          up.
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="conversation6">
-                    <img
-                      class="avatar-icon6"
-                      loading="lazy"
-                      alt=""
-                      
-                      src="{{url_for('static', filename='image/avatar-6@2x.png')}}"
-                    />
-
-                    <div class="text-wrapper3">
-                      <div class="text6">
-                        <div class="mom">Mom</div>
-                        <div class="thanks">Thanks!</div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="conversation7">
-                    <img
-                      class="avatar-icon7"
-                      loading="lazy"
-                      alt=""
-                      
-                      src="{{url_for('static', filename='image/avatar-7@2x.png')}}"
-                    />
-
-                    <div class="text-wrapper4">
-                      <div class="text7">
-                        <div class="sherry-roy">Sherry Roy</div>
-                        <div class="jack-needs-to">
-                          Jack needs to find a sitter for the dog and I don’t
-                          know who’s good
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="conversation8">
-            <div class="chat-header">
-              <div class="person1">
-                <img
-                  class="avatar-icon8"
-                  loading="lazy"
-                  alt=""
-                  
-                  src="{{url_for('static', filename='image/avatar-8@2x.png')}}"
-                />
-
-                <div class="text8">
-                  <div class="helena-hills1">Helena Hills</div>
-                  <div class="div18">20分鐘前上線</div>
-                </div>
-              </div>
-              <div class="call-icons">
-                <div class="icons">
-                  <img
-                    class="phone-icon"
-                    loading="lazy"
-                    alt=""
-                    src="{{url_for('static', filename='image/phone.svg')}}"
-                  />
-
-                  <img
-                    class="video-icon"
-                    loading="lazy"
-                    alt=""
-                    src="{{url_for('static', filename='image/video.svg')}}"
-                  />
-                </div>
-              </div>
-            </div>
-            
-            <div class="messages-parent" style="height: 500px; overflow-y: auto;">
-              <div class="messages">
-                  
-              </div>
-            </div>
-
-            <div class="reply">
-                <input type="text" class="label1" placeholder="Enter your message" />
-                <img class="mic-icon" loading="lazy" alt="" src="{{url_for('static', filename='image/mic.svg')}}" />
-                <img class="smile-icon" loading="lazy" alt="" src="{{url_for('static', filename='image/smile.svg')}}" />
-                <img class="image-icon1" loading="lazy" alt="" src="{{url_for('static', filename='image/image-1.svg')}}" />
-            </div>
-            
-            </div>
-          </div>
-        </section>
-        <div class="analysis-area">
-          <div class="analysis-content">
-            <a class="a7">情感分析區</a>
-          </div>
-          <div class="analysis-input">
-            <div class="analysis-input-child"></div>
-            <h1 class="h14">
-              輸入或上傳聊天對話讓我們幫助你分析對方的情感狀態
-            </h1>
-            <div class="analysis-button">
-              <div class="run-analysis" id="runAnalysisContainer">
-                <h1 class="h15">分析</h1>
-              </div>
-            </div>
-          </div>
         </div>
-      </main>
-      <div class="background"></div>
+        <div id="chat-window">
+            <div id="message-list"></div>
+            <form id="message-form">
+                <input type="text" id="message-input" placeholder="輸入消息...">
+                <button type="submit">發送</button>
+            </form>
+        </div>
     </div>
-
-    <script>
-      var runAnalysisContainer = document.getElementById("runAnalysisContainer");
-      if (runAnalysisContainer) {
-        runAnalysisContainer.addEventListener("click", function (e) {
-          window.location.href = "./sentiment-analysis.html";
-        });
-      }
-      
-    </script>
-    <script type="text/javascript">
-      document.addEventListener('DOMContentLoaded', function() {
-          var socket = io.connect('http://' + document.domain + ':' + location.port);
-  
-          // 當用戶連接時觸發
-          socket.on('connect', function() {
-              console.log('Connected');
-          });
-  
-          // 當收到消息時觸發
-          socket.on('message', function(msg) {
-              displayMessage(msg, 'contact-messages');
-          });
-  
-          // 發送消息
-          var messageInput = document.querySelector('.label1');
-          messageInput.addEventListener('keypress', function(e) {
-              if (e.key === 'Enter') {
-                  e.preventDefault(); // 防止默認的提交行為
-                  var msg = messageInput.value;
-                  if (msg.trim() !== "") { // 確保消息不為空
-                      socket.send(msg);
-                      displayMessage(msg, 'user-messages');
-                      messageInput.value = ''; // 清空輸入框
-                  }
-              }
-          });
-  
-          // 顯示消息
-          function displayMessage(msg, messageType) {
-            var messages = document.querySelector('.messages');
-            var newMessage = document.createElement('div');
-            newMessage.classList.add('bubble');
-            newMessage.innerHTML = `
-                <div class="${messageType}">
-                  <div class="message-content">${msg}</div>
-                  <div class="timestamp">${formatTimeOnly(new Date())}</div>
-                </div>`;
-            messages.appendChild(newMessage);
-
-            //if (messagesContainer.children.length > 8) {
-            //  messagesContainer.removeChild(messagesContainer.children[0]);
-            //}
-
-            messages.scrollTop = messages.scrollHeight; // 滾動到最新消息
-          }
-          function formatTimeOnly(date) {
-            let hours = date.getHours();
-            let minutes = date.getMinutes();
-            const ampm = hours >= 12 ? '下午' : '上午';
-            hours = hours % 12;
-            hours = hours ? hours : 12; // 將 0 轉換為 12
-            minutes = minutes < 10 ? '0' + minutes : minutes;
-            return `${ampm} ${hours}:${minutes}`;
-          }
-      })
-  </script>
-  <!--script
-    const MAX_VISIBLE_MESSAGES = 15;
-    let allMessages = [];
-    const messagesContainer = document.querySelector('.messages');
-    const messagesParent = document.querySelector('.messages-parent');
-    
-    function addNewMessage(message) {
-        allMessages.push(message);
-        const messageElement = createMessageElement(message);
-        messagesContainer.appendChild(messageElement);
-        
-        // 如果訊息數量超過限制,刪除最舊的訊息
-        if (allMessages.length > MAX_VISIBLE_MESSAGES) {
-            allMessages.shift();
-            messagesContainer.removeChild(messagesContainer.firstChild);
-        }
-        
-        // 滾動到底部
-        scrollToBottom();
-    }
-    
-    function createMessageElement(message) {
-        const bubble = document.createElement('div');
-        bubble.className = 'bubble';
-        
-        // 根據訊息類型設置不同的樣式
-        if (message.isUser) {
-            bubble.classList.add('user-messages');
-        } else {
-            bubble.classList.add('contact-messages');
-        }
-        
-        const content = document.createElement('div');
-        content.textContent = message.text;
-        bubble.appendChild(content);
-        
-        return bubble;
-    }
-    
-    function scrollToBottom() {
-        messagesParent.scrollTop = messagesParent.scrollHeight;
-    }
-    
-    // 模擬接收新訊息的函數 (實際應用中應替換為真實的訊息接收邏輯)
-    function simulateNewMessage(text, isUser) {
-        addNewMessage({ text, isUser });
-    }
-    
-    // 初始化一些訊息
-    for (let i = 1; i <= 10; i++) {
-        simulateNewMessage(`初始訊息 ${i}`, i % 2 === 0);
-    }
-    
-    // 測試: 每3秒添加一條新訊息
-    setInterval(() => {
-        simulateNewMessage(`新訊息 ${new Date().toLocaleTimeString()}`, Math.random() > 0.5);
-    }, 3000);
-    
-    </script>
-  -->
-  </body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
+    <script src="{{ url_for('static', filename='script.js') }}"></script>
+</body>
 </html>
