--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,7 @@
 
     <script>
       document.getElementById("loginButtonContainer").addEventListener("click", function() {
-        window.location.href = "{{ url_for('login_page') }}";
+        window.location.href = "{{ url_for('auth.login_page') }}";
       });
     </script>
   </body>
